@@ -329,6 +329,14 @@ public class RemoteServer {
                         addIfSet(argsList, "java.protocol.handler.pkgs");
                     }
 
+                    // add modules needed in Java 9+
+                    double version = Double.parseDouble(System.getProperty("java.specification.version"));
+                    if (version >= 9) {
+                        argsList.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
+                        argsList.add("--add-opens=java.base/java.io=ALL-UNNAMED");
+                        argsList.add("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED");
+                    }
+
                     argsList.add("-ea");
                     argsList.add("-classpath");
 
